--- a/蘵感ZanGan上傳/www.html
+++ b/蘵感ZanGan上傳/www.html
@@ -397,99 +397,83 @@
 
     <!-- 6.news  -->
     <div id="news">
-        <div class="news_main">
+        <div class="pho">
             <img src="img/index/index-news/news_img.png" alt="">
         </div>
-        <div class="news_col">
-            <nav>
+        <nav class="uu">
+            <div class="nav">
                 <div>
                     <h3>NEWS</h3>
                     <h1>最新消息</h1>
                     <hr>
                 </div>
-                <div class="news_more">
+                <div class="more">
                     <a href="news.html">查看更多</a>
                     <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                 </div>
-            </nav>
-            <span>
+            </div>
+            <!-- <div class="kk"> -->
                 <td>
-                    <!-- section  一個日期+最新消息標題 -->
-                    <div class="news_news">
-                        <tr>
-                            <p>
-                            <div class="news_date"> 2023.1.16 <br> </div>
-                            <div class="news_text"> 【活動快訊】 11月美學下午茶報名開始了！</div>
-                            <div class="news_hr">
-                                <hr>
-                            </div>
-                            <div class="news_img">
-                                <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
-                            </div>
-                            </p>
-                        </tr>
+                    <!-- 11月美學... -->
+                    <div class="box1">
+                        <div class="pp">
+                            <h3>2023.1.16</h3>
+                            <h2> 【活動快訊】 11月美學下午茶報名開始了！</h2>
+                        </div>
+                        <div class="arrow">
+                            <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                        </div>
                     </div>
-                    <div class="news_news">
-                        <tr>
-                            <p></p>
-                            <div class="news_date"> 2023.1.16 <br> </div>
-                            <div class="news_text"> 【課程快訊】 10月特別推出「DIY皮革工藝」快閃課程，不可錯過！</div>
-                            <div class="news_hr">
-                                <hr>
-                            </div>
-                            <div class="news_img">
-                                <a href="news_page_oct.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
-                            </div>
-                            </p>
-                        </tr>
+                    <hr>
+                    <!-- 10月... -->
+                    <div class="box1">
+                        <div class="pp">
+                            <h3>2023.1.16</h3>
+                            <h2> 【課程快訊】 10月特別推出「DIY皮革工藝」快閃課程，不可錯過！</h2>
+                        </div>
+                        <div class="arrow">
+                            <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                        </div>
                     </div>
-                    <div class="news_news">
-                        <tr>
-                            <p>
-                            <div class="news_date"> 2023.1.16 <br> </div>
-                            <div class="news_text"> 【課程快訊】手作花藝課程邀請網紅講師分享插花技巧，快來一起學習吧！</div>
-                            <div class="news_hr">
-                                <hr>
-                            </div>
-                            <div class="news_img">
-                                <a href="news_page_flower.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
-                            </div>
-                            </p>
-                        </tr>
+                    <hr>
+                    <!-- 手作花藝 -->
+                    <div class="box1">
+                        <div class="pp">
+                            <h3>2023.1.16</h3>
+                            <h2> 【課程快訊】手作花藝課程邀請網紅講師分享插花技巧，快來一起學習吧！</h2>
+                        </div>
+                        <div class="arrow">
+                            <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                        </div>
                     </div>
-                    <div class="news_news">
-                        <tr>
-                            <p>
-                            <div class="news_date"> 2023.1.16 <br> </div>
-                            <div class="news_text"> 【課程異動】 11/20花藝、手作香水下午班，停課一次。</div>
-                            <div class="news_hr">
-                                <hr>
-                            </div>
-                            <div class="news_img">
-                                <a href="news_page_stop.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
-                            </div>
-                            </p>
-                        </tr>
+                    <hr>
+                    <!-- 香水停課 -->
+                    <div class="box1">
+                        <div class="pp">
+                            <h3>2023.1.16</h3>
+                            <h2> 【課程異動】 11/20花藝、手作香水下午班，停課一次。</h2>
+                        </div>
+                        <div class="arrow">
+                            <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                        </div>
                     </div>
-                    <div class="news_news">
-                        <tr>
-                            <p>
-                            <div class="news_date"> 2023.1.16 <br> </div>
-                            <div class="news_text"> 【課程異動】11/20 藝術油畫下午班，停課一次。</div>
-                            <div class="news_hr">
-                                <hr>
-                            </div>
-                            <div class="news_img">
-                                <a href="news_page_stoppaint.html"><img src="img/index/index-news/arrow(白).svg" alt="">
-                                </a>
-                            </div>
-                            </p>
-                        </tr>
+                    <hr>
+                    <!-- 油畫停課 -->
+                    <div class="box1">
+                        <div class="pp">
+                            <h3>2023.1.16</h3>
+                            <h2> 【課程異動】11/20 藝術油畫下午班，停課一次。</h2>
+                        </div>
+                        <div class="arrow">
+                            <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                        </div>
                     </div>
+                    <hr>
                 </td>
-            </span>
-        </div>
+            </div>
+        </nav>
     </div>
+
     <!-- 7.media -->
     <div id="media">
         <div class="c">
