--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -176,127 +176,134 @@
     <!-- 4.course  -->
     <div id="course">
         <ul>
-            <!-- <h1>course</h1>
-                <hr> -->
-            <!-- 藝術插花 flower-->
-            <!-- <div class="course_nav"> -->
-            <li class="f">
-                <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg"
-                            width="14" height="20" alt="logo"></span>
-                    <span class="course_text">
+            <!-- 藝術插花 -->
+            <li class="item1">
+                <nav>
+                    <div>
+                        <img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14" height="20"
+                            alt="logo">
+                    </div>
+                    <span>
                         <h3>藝術插花</h3>
                     </span>
-                    <span>
+                    <div>
                         <a href="course_flower.html">
                             <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
                         </a>
-                    </span>
-                </span>
-                <div>
+                    </div>
+                </nav>
+                <div class="cimg">
                     <img src="img/index/index-course/藝術插花.png" alt="">
-                    <div class="course_p">
-                        <p>
+                    <div class="cblock">
+                        <h3>
                             用鮮花創作出美麗的花藝作<br>品，學習插花技巧、色彩搭<br>配、創意設計，放鬆心情，<br>享受與自然互動的時光。
-                        </p>
+                        </h3>
                     </div>
                 </div>
             </li>
-            <!-- </div> -->
             <!-- 自由繪畫 paint-->
-            <li class="pai">
-                <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg"
-                            width="14" height="20" alt="logo"></span>
-                    <span class="course_text">
+            <li class="item2">
+                <nav>
+                    <div>
+                        <img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14" height="20"
+                            alt="logo">
+                    </div>
+                    <span>
                         <h3>自由繪畫</h3>
                     </span>
-                    <span>
-                        <a href="course_paint.html">
+                    <div>
+                        <a href="course_flower.html">
                             <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
                         </a>
-                    </span>
-                </span>
-                <div>
+                    </div>
+                </nav>
+                <div class="cimg">
                     <img src="img/index/index-course/自由繪畫.png" alt="">
-                    <span class="course_p">
-                        <p>
+                    <div class="cblock">
+                        <h3>
                             用鮮花創作出美麗的花藝作<br>品，學習插花技巧、色彩搭<br>配、創意設計，放鬆心情，<br>享受與自然互動的時光。
-                        </p>
-                    </span>
+                        </h3>
+                    </div>
                 </div>
             </li>
             <!--蘵感手作 handmade -->
-            <li class="h">
-                <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg"
-                            width="14" height="20" alt="logo"></span>
-                    <span class="course_text">
+            <li class="item3">
+                <nav>
+                    <div>
+                        <img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14" height="20"
+                            alt="logo">
+                    </div>
+                    <span>
                         <h3>蘵感手作</h3>
                     </span>
-                    <span>
-                        <a href="course_handmade.html">
+                    <div>
+                        <a href="course_flower.html">
                             <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
                         </a>
-                    </span>
-                </span>
-                <div>
+                    </div>
+                </nav>
+                <div class="cimg">
                     <img src="img/index/index-course/蘵感手作.png" alt="">
-                    <span class="course_p">
-                        <p>
+                    <div class="cblock">
+                        <h3>
                             用鮮花創作出美麗的花藝作<br>品，學習插花技巧、色彩搭<br>配、創意設計，放鬆心情，<br>享受與自然互動的時光。
-                        </p>
-                    </span>
+                        </h3>
+                    </div>
                 </div>
             </li>
             <!-- 香水特製Lab purfume -->
-            <li class="pu">
-                <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg"
-                            width="14" height="20" alt="logo"></span>
-                    <span class="course_text">
+            <li class="item4">
+                <nav>
+                    <div>
+                        <img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14" height="20"
+                            alt="logo">
+                    </div>
+                    <span>
                         <h3>香水特製Lab</h3>
                     </span>
-                    <span>
-                        <a href="course_purfume.html">
+                    <div>
+                        <a href="course_flower.html">
                             <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
                         </a>
-                    </span>
-                </span>
-                <div>
+                    </div>
+                </nav>
+                <div class="cimg">
                     <img src="img/index/index-course/香水調製 Lab.png" alt="">
-                    <span class="course_p">
-                        <p>
+                    <div class="cblock">
+                        <h3>
                             用鮮花創作出美麗的花藝作<br>品，學習插花技巧、色彩搭<br>配、創意設計，放鬆心情，<br>享受與自然互動的時光。
-                        </p>
-                    </span>
+                        </h3>
+                    </div>
                 </div>
             </li>
             <!-- 小點茶藝工坊 dessert-->
-            <li class="d">
-                <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg"
-                            width="14" height="20" alt="logo"></span>
-                    <span class="course_text">
+            <li class="item5">
+                <nav>
+                    <div>
+                        <img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14" height="20"
+                            alt="logo">
+                    </div>
+                    <span>
                         <h3>小點茶藝工坊</h3>
                     </span>
-                    <span>
-                        <a href="course_dessert.html">
+                    <div>
+                        <a href="course_flower.html">
                             <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
                         </a>
-                    </span>
-                </span>
-                <div>
+                    </div>
+                </nav>
+                <div class="cimg">
                     <img src="img/index/index-course/小點茶藝工坊.png" alt="">
-                    <span class="course_p">
-                        <p>
+                    <div class="cblock">
+                        <h3>
                             用鮮花創作出美麗的花藝作<br>品，學習插花技巧、色彩搭<br>配、創意設計，放鬆心情，<br>享受與自然互動的時光。
-                        </p>
-                    </span>
+                        </h3>
+                    </div>
                 </div>
             </li>
         </ul>
     </div>
+
     <!-- 5.teachers -->
     <div id="teachers">
         <div class="a">
@@ -304,7 +311,6 @@
                 <h3>TEACHERS</h3>
                 <h1>蘵感 <pr>專業師資 </h1>
                 <div class="hr"></div>
-
             </div>
             <div class="b">
                 <img src="img/index/index-teachers/logo(棕色).svg" alt="">
@@ -391,107 +397,83 @@
 
     <!-- 6.news  -->
     <div id="news">
-        <div class="news_main">
+        <div class="pho">
             <img src="img/index/index-news/news_img.png" alt="">
         </div>
-        <div class="news_col">
-            <nav>
+        <nav class="uu">
+            <div class="nav">
                 <div>
                     <h3>NEWS</h3>
                     <h1>最新消息</h1>
                     <hr>
-                    <!-- test -->
-                    <!-- <div class="news_hrline">
-                        <hr>
-                    </div> -->
                 </div>
-                <div class="news_more">
+                <div class="more">
                     <a href="news.html">查看更多</a>
                     <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                 </div>
-            </nav>
-            <span>
+            </div>
+            <!-- <div class="kk"> -->
                 <td>
-                    <!-- section  -->
-                    <!-- 一個日期+最新消息標題 -->
-                    <div class="news_news">
-                        <tr>
-                            <p>
-                            <div class="news_date"> 2023.1.16 <br> </div>
-                            <div class="news_text"> 【活動快訊】 11月美學下午茶報名開始了！</div>
-                            <div class="news_hr">
-                                <hr>
-                            </div>
-                            <div class="news_img">
-                                <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
-                            </div>
-                            </p>
-                        </tr>
+                    <!-- 11月美學... -->
+                    <div class="box1">
+                        <div class="pp">
+                            <h3>2023.1.16</h3>
+                            <h2> 【活動快訊】 11月美學下午茶報名開始了！</h2>
+                        </div>
+                        <div class="arrow">
+                            <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                        </div>
                     </div>
-                    <div class="news_news">
-                        <tr>
-                            <p></p>
-                            <div class="news_date"> 2023.1.16 <br> </div>
-                            <div class="news_text"> 【課程快訊】 10月特別推出「DIY皮革工藝」快閃課程，不可錯過！</div>
-                            <!-- test -->
-                            <!-- <h3> 2023.1.16</h3>
-                            <h2>【課程快訊】 10月特別推出「DIY皮革工藝」快閃課程，不可錯過！</h2> -->
-                            <div class="news_hr">
-                                <hr>
-                            </div>
-                            <div class="news_img">
-                                <a href="news_page_oct.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
-                            </div>
-                            </p>
-                        </tr>
+                    <hr>
+                    <!-- 10月... -->
+                    <div class="box1">
+                        <div class="pp">
+                            <h3>2023.1.16</h3>
+                            <h2> 【課程快訊】 10月特別推出「DIY皮革工藝」快閃課程，不可錯過！</h2>
+                        </div>
+                        <div class="arrow">
+                            <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                        </div>
                     </div>
-                    <div class="news_news">
-                        <tr>
-                            <p>
-                            <div class="news_date"> 2023.1.16 <br> </div>
-                            <div class="news_text"> 【課程快訊】手作花藝課程邀請網紅講師分享插花技巧，快來一起學習吧！</div>
-                            <div class="news_hr">
-                                <hr>
-                            </div>
-                            <div class="news_img">
-                                <a href="news_page_flower.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
-                            </div>
-                            </p>
-                        </tr>
+                    <hr>
+                    <!-- 手作花藝 -->
+                    <div class="box1">
+                        <div class="pp">
+                            <h3>2023.1.16</h3>
+                            <h2> 【課程快訊】手作花藝課程邀請網紅講師分享插花技巧，快來一起學習吧！</h2>
+                        </div>
+                        <div class="arrow">
+                            <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                        </div>
                     </div>
-                    <div class="news_news">
-                        <tr>
-                            <p>
-                            <div class="news_date"> 2023.1.16 <br> </div>
-                            <div class="news_text"> 【課程異動】 11/20花藝、手作香水下午班，停課一次。</div>
-                            <div class="news_hr">
-                                <hr>
-                            </div>
-                            <div class="news_img">
-                                <a href="news_page_stop.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
-                            </div>
-                            </p>
-                        </tr>
+                    <hr>
+                    <!-- 香水停課 -->
+                    <div class="box1">
+                        <div class="pp">
+                            <h3>2023.1.16</h3>
+                            <h2> 【課程異動】 11/20花藝、手作香水下午班，停課一次。</h2>
+                        </div>
+                        <div class="arrow">
+                            <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                        </div>
                     </div>
-                    <div class="news_news">
-                        <tr>
-                            <p>
-                            <div class="news_date"> 2023.1.16 <br> </div>
-                            <div class="news_text"> 【課程異動】11/20 藝術油畫下午班，停課一次。</div>
-                            <div class="news_hr">
-                                <hr>
-                            </div>
-                            <div class="news_img">
-                                <a href="news_page_stoppaint.html"><img src="img/index/index-news/arrow(白).svg"
-                                        alt=""></a>
-                            </div>
-                            </p>
-                        </tr>
+                    <hr>
+                    <!-- 油畫停課 -->
+                    <div class="box1">
+                        <div class="pp">
+                            <h3>2023.1.16</h3>
+                            <h2> 【課程異動】11/20 藝術油畫下午班，停課一次。</h2>
+                        </div>
+                        <div class="arrow">
+                            <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                        </div>
                     </div>
+                    <hr>
                 </td>
-            </span>
-        </div>
+            </div>
+        </nav>
     </div>
+
     <!-- 7.media -->
     <div id="media">
         <div class="c">
