--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -76,7 +76,7 @@
             <!-- <figure><img src="img/index/index-banner/banner-video_AdobeExpress.gif" alt=""></figure> -->
         </div>
         <div class="sec">
-            <div class="logo">
+            <div>
                 <img src="img/index/index-banner/logo.svg" width="80" height="80" alt="">
             </div>
             <div class="text">
@@ -412,65 +412,63 @@
                     <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                 </div>
             </div>
-            <!-- <div class="kk"> -->
-                <td>
-                    <!-- 11月美學... -->
-                    <div class="box1">
-                        <div class="pp">
-                            <h3>2023.1.16</h3>
-                            <h2> 【活動快訊】 11月美學下午茶報名開始了！</h2>
-                        </div>
-                        <div class="arrow">
-                            <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
-                        </div>
+            <td>
+                <!-- 11月美學... -->
+                <div class="box1">
+                    <div class="pp">
+                        <h3>2023.1.16</h3>
+                        <h2> 【活動快訊】 11月美學下午茶報名開始了！</h2>
                     </div>
-                    <hr>
-                    <!-- 10月... -->
-                    <div class="box1">
-                        <div class="pp">
-                            <h3>2023.1.16</h3>
-                            <h2> 【課程快訊】 10月特別推出「DIY皮革工藝」快閃課程，不可錯過！</h2>
-                        </div>
-                        <div class="arrow">
-                            <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
-                        </div>
+                    <div class="arrow">
+                        <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
                     </div>
-                    <hr>
-                    <!-- 手作花藝 -->
-                    <div class="box1">
-                        <div class="pp">
-                            <h3>2023.1.16</h3>
-                            <h2> 【課程快訊】手作花藝課程邀請網紅講師分享插花技巧，快來一起學習吧！</h2>
-                        </div>
-                        <div class="arrow">
-                            <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
-                        </div>
+                </div>
+                <hr>
+                <!-- 10月... -->
+                <div class="box1">
+                    <div class="pp">
+                        <h3>2023.1.16</h3>
+                        <h2> 【課程快訊】 10月特別推出「DIY皮革工藝」快閃課程，不可錯過！</h2>
                     </div>
-                    <hr>
-                    <!-- 香水停課 -->
-                    <div class="box1">
-                        <div class="pp">
-                            <h3>2023.1.16</h3>
-                            <h2> 【課程異動】 11/20花藝、手作香水下午班，停課一次。</h2>
-                        </div>
-                        <div class="arrow">
-                            <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
-                        </div>
+                    <div class="arrow">
+                        <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
                     </div>
-                    <hr>
-                    <!-- 油畫停課 -->
-                    <div class="box1">
-                        <div class="pp">
-                            <h3>2023.1.16</h3>
-                            <h2> 【課程異動】11/20 藝術油畫下午班，停課一次。</h2>
-                        </div>
-                        <div class="arrow">
-                            <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
-                        </div>
+                </div>
+                <hr>
+                <!-- 手作花藝 -->
+                <div class="box1">
+                    <div class="pp">
+                        <h3>2023.1.16</h3>
+                        <h2> 【課程快訊】手作花藝課程邀請網紅講師分享插花技巧，快來一起學習吧！</h2>
                     </div>
-                    <hr>
-                </td>
-            </div>
+                    <div class="arrow">
+                        <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                    </div>
+                </div>
+                <hr>
+                <!-- 香水停課 -->
+                <div class="box1">
+                    <div class="pp">
+                        <h3>2023.1.16</h3>
+                        <h2> 【課程異動】 11/20花藝、手作香水下午班，停課一次。</h2>
+                    </div>
+                    <div class="arrow">
+                        <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                    </div>
+                </div>
+                <hr>
+                <!-- 油畫停課 -->
+                <div class="box1">
+                    <div class="pp">
+                        <h3>2023.1.16</h3>
+                        <h2> 【課程異動】11/20 藝術油畫下午班，停課一次。</h2>
+                    </div>
+                    <div class="arrow">
+                        <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                    </div>
+                </div>
+                <hr>
+            </td>
         </nav>
     </div>
 
@@ -483,9 +481,7 @@
                     <h1>蘵感文章</h1>
                 </a>
                 <hr>
-                <!-- <div class="media_hr">
-                    <hr>
-                </div> -->
+
             </div>
             <div class="media_logo">
                 <img src="img/index/index-about/EN-logo.svg" alt="">
@@ -592,7 +588,6 @@
     <!-- +a -->
     <!-- 8.footer -->
     <div id="footer">
-        <!-- <div class="all_section"> -->
         <div class="footer_ul">
             <!-- 第一欄 -->
             <ul>
