0513 1420 renew index ok

--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -474,34 +474,30 @@
 
     <!-- 7.media -->
     <div id="media">
-        <div class="c">
-            <div class="media_nav">
+        <div class="nav">
+            <div>
                 <h3>MEDIA</h3>
                 <a href="media.html">
                     <h1>蘵感文章</h1>
                 </a>
                 <hr>
-
             </div>
-            <div class="media_logo">
-                <img src="img/index/index-about/EN-logo.svg" alt="">
-            </div>
+            <img src="img/index/index-about/EN-logo.svg" alt="">
         </div>
-        <!-- 第一直欄區塊 -->
-        <div class="media_main">
+        <!-- 內容大區塊 -->
+        <div class="main">
             <!-- first col第一欄  -->
-            <div class="media_col">
+            <div>
                 <ul>
                     <!-- first row第一列 -->
-                    <!-- section內容 -->
                     <div class="media_section">
                         <li>
-                            <div class="media_date"> 2023.1.16</div>
-                            <div class="media_title">【課程快訊】手作花藝課程邀請網紅講師Lori分享插花技巧，快來一起學習吧！</div>
-                            <div class="media_img"><img src="img/index/index-media/網紅講師.png" alt=""></div>
-                            <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
-                            <div class="media_more">
-                                <a href="media.html">閱讀更多</a>
+                            <h3>2023.1.16</h3>
+                            <h2>【課程快訊】手作花藝課程邀請網紅講師Lori分享插花技巧，快來一起學習吧！</h2>
+                            <span><img src="img/index/index-media/media1.png" alt=""></span>
+                            <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
+                            <div class="more">
+                                <a href="media_page_nov.html">閱讀更多</a>
                                 <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                             </div>
                         </li>
@@ -509,29 +505,28 @@
                     <!-- second row第二列 -->
                     <div class="media_section">
                         <li>
-                            <div class="media_date"> 2023.1.16</div>
-                            <div class="media_title">【蘵感花藝學院】給新手的插花先行課，選擇最適合的花藝風格！</div>
-                            <div class="media_img"><img src="img/index/index-media/插花.png" alt=""></div>
-                            <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
-                            <div class="media_more">
+                            <h3>2023.1.16</h3>
+                            <h2>【蘵感花藝學院】給新手的插花先行課，選擇最適合的花藝風格！</h2>
+                            <span><img src="img/index/index-media/media3.png" alt=""></span>
+                            <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
+                            <div class="more">
                                 <a href="media.html">閱讀更多</a>
                                 <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                             </div>
                         </li>
                     </div>
+                </ul>
             </div>
-            </ul>
             <!-- second col第二欄  -->
             <ul>
                 <!-- first row第一列 -->
-                <!-- section內容 -->
                 <div class="media_section">
                     <li>
-                        <div class="media_date"> 2023.1.16</div>
-                        <div class="media_title">【2023最新】手作愛好者必看！五大手作種類與課程介紹</div>
-                        <div class="media_img"><img src="img/index/index-media/手作.png" alt=""></div>
-                        <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
-                        <div class="media_more">
+                        <h3>2023.1.16</h3>
+                        <h2>【2023最新】手作愛好者必看！五大手作種類與課程介紹</h2>
+                        <span><img src="img/index/index-media/media2.png" alt=""></span>
+                        <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
+                        <div class="more">
                             <a href="media.html">閱讀更多</a>
                             <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
@@ -540,11 +535,11 @@
                 <!-- second row第二列 -->
                 <div class="media_section">
                     <li>
-                        <div class="media_date"> 2023.1.16</div>
-                        <div class="media_title">無法出國，好想穿和服吃日式糕點！ 在家如何製作日式點心！</div>
-                        <div class="media_img"><img src="img/index/index-media/點心.png" alt=""></div>
-                        <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
-                        <div class="media_more">
+                        <h3>2023.1.16</h3>
+                        <h2>無法出國，好想穿和服吃日式糕點！ 在家如何製作日式點心！</h2>
+                        <span><img src="img/index/index-media/media4.png" alt=""></span>
+                        <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
+                        <div class="more">
                             <a href="media.html">閱讀更多</a>
                             <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
@@ -557,11 +552,11 @@
                 <!-- section內容 -->
                 <div class="media_section">
                     <li>
-                        <div class="media_date"> 2023.1.16</div>
-                        <div class="media_title">【好評回饋】感謝報導，蘵感工作室提供生活新型型態的體驗活動！</div>
-                        <div class="media_img"><img src="img/index/index-media/體驗活動.png" alt=""></div>
-                        <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
-                        <div class="media_more">
+                        <h3>2023.1.16</h3>
+                        <h2>【好評回饋】感謝報導，蘵感工作室提供生活新型型態的體驗活動！</h2>
+                        <span><img src="img/index/index-media/media6.png" alt=""></span>
+                        <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
+                        <div class="more">
                             <a href="media.html">閱讀更多</a>
                             <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
@@ -570,11 +565,11 @@
                 <!-- second row第二列 -->
                 <div class="media_section">
                     <li>
-                        <div class="media_date"> 2023.1.16</div>
-                        <div class="media_title">【好評回饋】，知名網紅兩孩子的媽Dolly一日體驗</div>
-                        <div class="media_img"><img src="img/index/index-media/一日體驗.png" alt=""></div>
-                        <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
-                        <div class="media_more">
+                        <h3>2023.1.16</h3>
+                        <h2>【好評回饋】，知名網紅兩孩子的媽Dolly一日體驗</h2>
+                        <span><img src="img/index/index-media/media5.png" alt=""></span>
+                        <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
+                        <div class="more">
                             <a href="media.html">閱讀更多</a>
                             <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
