--- a/蘵感ZanGan上傳/signup.html
+++ b/蘵感ZanGan上傳/signup.html
@@ -56,60 +56,75 @@
         </nav>
     </div>
 
-    <!-- 主要內容區 -->
+    <!-- signup -->
     <main id="signup">
-        <!-- 左半區塊 -->
-            <nav>
-                <h3>ENROLL IN</h3>
-                <h1>報名課程</h1>
-                <h4>您好，這裡僅供預約報名的服務。如需付款之類的，看你們要不要自己過來繳費呀。<br>
-                    或是我們直接上門催繳(此步驟不會有任何的門受到損害)</h4>
-            </nav>
+        <!-- 上面導覽列 -->
+        <nav>
+            <h3>ENROLL IN</h3>
+            <h1>報名課程</h1>
+            <h4>您好，這裡僅供預約報名的服務。如需付款之類的，看你們要不要自己過來繳費呀。<br>
+                或是我們直接上門催繳(此步驟不會有任何的門受到損害)</h4>
+        </nav>
+        <!-- 整個區塊 -->
+        <div class="block1">
+            <!-- 左邊課程或活動下拉選單 -->
             <div>
-                <!-- 左邊課程或活動下拉選單 -->
-                <div class="dropbox">
-                    <!-- 小標題區 -->
-                    <div class="item">
-                        <span class="box1">
-                            <h4>課程</h4>
-                            <hr>
-                        </span>
-                        <span class="box1">
-                            <h4>活動/工作坊</h4>
-                            <hr>
-                        </span>
-                    </div>
-                    <!-- 課程類別:-->
-                    <label for="ccourse"></label>
-                    <select name="ccourse" id="ccourse">
-                        <option value="">課程類別:</option>
-                        <option value="藝術插花">藝術插花</option>
-                        <option value="自由繪畫">自由繪畫</option>
-                        <option value="蘵感手作">蘵感手作</option>
-                        <option value="香水特製Lab">香水特製Lab</option>
-                        <option value="小點茶藝工坊">小點茶藝工坊</option>
-                    </select>
-                    <!-- 課堂名稱: -->
-                    <label for="name"></label>
-                    <select name="name" id="name">
-                        <option value="">課程名稱:</option>
-                        <option value="藝術插花">藝術插花</option>
-                        <option value="自由繪畫">自由繪畫</option>
-                        <option value="蘵感手作">蘵感手作</option>
-                        <option value="香水特製Lab">香水特製Lab</option>
-                        <option value="小點茶藝工坊">小點茶藝工坊</option>
-                    </select>
-                    <!-- 加入預約清單 -->
-                    <div class="list">
-                        <h4>加入預約清單</h4>
-                        <img src="img/index/index-news/arrow(白).svg" alt="">
-                    </div>
+                <!-- 小標題區 -->
+                <div class="item">
+                    <span class="box1">
+                        <h4>課程</h4>
+                        <hr>
+                    </span>
+                    <span class="box1">
+                        <h4>活動/工作坊</h4>
+                        <hr>
+                    </span>
                 </div>
-                <!-- 右邊顯示選取課程或活動 -->
-                <div>
-
+                <!-- 課程類別:-->
+                <label for="ccourse"></label>
+                <select name="ccourse" id="ccourse">
+                    <option value="">課程類別:</option>
+                    <option value="藝術插花">藝術插花</option>
+                    <option value="自由繪畫">自由繪畫</option>
+                    <option value="蘵感手作">蘵感手作</option>
+                    <option value="香水特製Lab">香水特製Lab</option>
+                    <option value="小點茶藝工坊">小點茶藝工坊</option>
+                </select>
+                <!-- 課堂名稱: -->
+                <label for="name"></label>
+                <select name="name" id="name">
+                    <option value="">課程名稱:</option>
+                    <option value="藝術插花">藝術插花</option>
+                    <option value="自由繪畫">自由繪畫</option>
+                    <option value="蘵感手作">蘵感手作</option>
+                    <option value="香水特製Lab">香水特製Lab</option>
+                    <option value="小點茶藝工坊">小點茶藝工坊</option>
+                </select>
+                <!-- 加入預約清單 -->
+                <div class="list">
+                    <h4>加入預約清單</h4>
+                    <img src="img/index/index-news/arrow(白).svg" alt="">
                 </div>
             </div>
+            <!-- 垂直線 -->
+            <span class="vline">
+                <hr>
+            </span>
+            <!-- 右邊顯示選取課程或活動 -->
+            <div>
+                <!-- 小標題區 -->
+                <div class="item">
+                    <span class="box1">
+                        <h4>已添加的課程/活動</h4>
+                        <hr>
+                    </span>
+                </div>
+                <div>
+                    <img src="img/index/index-course/logo（橢圓綜）.svg" width="55" height="90" alt="">
+                    <h2>清單內尚未添加課程/活動</h2>
+                </div>
+            </div>
+        </div>
 
 
 
