--- a/蘵感ZanGan上傳/media_page_nov.html
+++ b/蘵感ZanGan上傳/media_page_nov.html
@@ -199,7 +199,7 @@
                         <li>
                             <div class="media_date"> 2023.1.16</div>
                             <div class="media_title">【課程快訊】手作花藝課程邀請網紅講師Lori分享插花技巧，快來一起學習吧！</div>
-                            <div class="media_img"><img src="img/index/index-media/網紅講師.png" alt=""></div>
+                            <div class="media_img"><img src="img/index/index-media/media1.png" alt=""></div>
                             <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
                             <div class="more">
                                 <a href="media.html">閱讀更多</a>
@@ -212,7 +212,7 @@
                         <li>
                             <div class="media_date"> 2023.1.16</div>
                             <div class="media_title">【蘵感花藝學院】給新手的插花先行課，選擇最適合的花藝風格！</div>
-                            <div class="media_img"><img src="img/index/index-media/插花.png" alt=""></div>
+                            <div class="media_img"><img src="img/index/index-media/media3.png" alt=""></div>
                             <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
                             <div class="more">
                                 <a href="media.html">閱讀更多</a>
@@ -230,7 +230,7 @@
                     <li>
                         <div class="media_date"> 2023.1.16</div>
                         <div class="media_title">【2023最新】手作愛好者必看！五大手作種類與課程介紹</div>
-                        <div class="media_img"><img src="img/index/index-media/手作.png" alt=""></div>
+                        <div class="media_img"><img src="img/index/index-media/media2.png" alt=""></div>
                         <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
                         <div class="more">
                             <a href="media.html">閱讀更多</a>
@@ -243,7 +243,7 @@
                     <li>
                         <div class="media_date"> 2023.1.16</div>
                         <div class="media_title">無法出國，好想穿和服吃日式糕點！ 在家如何製作日式點心！</div>
-                        <div class="media_img"><img src="img/index/index-media/點心.png" alt=""></div>
+                        <div class="media_img"><img src="img/index/index-media/media4.png" alt=""></div>
                         <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
                         <div class="more">
                             <a href="media.html">閱讀更多</a>
@@ -260,7 +260,7 @@
                     <li>
                         <div class="media_date"> 2023.1.16</div>
                         <div class="media_title">【好評回饋】感謝報導，蘵感工作室提供生活新型型態的體驗活動！</div>
-                        <div class="media_img"><img src="img/index/index-media/體驗活動.png" alt=""></div>
+                        <div class="media_img"><img src="img/index/index-media/media6.png" alt=""></div>
                         <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
                         <div class="more">
                             <a href="media.html">閱讀更多</a>
@@ -273,7 +273,7 @@
                     <li>
                         <div class="media_date"> 2023.1.16</div>
                         <div class="media_title">【好評回饋】，知名網紅兩孩子的媽Dolly一日體驗</div>
-                        <div class="media_img"><img src="img/index/index-media/一日體驗.png" alt=""></div>
+                        <div class="media_img"><img src="img/index/index-media/media5.png" alt=""></div>
                         <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
                         <div class="more">
                             <a href="media.html">閱讀更多</a>
