--- a/蘵感ZanGan上傳/signup.html
+++ b/蘵感ZanGan上傳/signup.html
@@ -111,7 +111,7 @@
                 <hr>
             </span>
             <!-- 右邊顯示選取課程或活動 -->
-            <div>
+            <div class="nav2">
                 <!-- 小標題區 -->
                 <div class="item">
                     <span class="box1">
@@ -119,7 +119,8 @@
                         <hr>
                     </span>
                 </div>
-                <div>
+                <!-- 右邊小區塊  -->
+                <div class="list2">
                     <img src="img/index/index-course/logo（橢圓綜）.svg" width="55" height="90" alt="">
                     <h2>清單內尚未添加課程/活動</h2>
                 </div>
