--- a/蘵感ZanGan上傳/media.html
+++ b/蘵感ZanGan上傳/media.html
@@ -81,7 +81,7 @@
             </div>
             <div class="list_block">
                 <article class="list_item">
-                    <figure><img src="img/media/media-1.jpg" alt=""></figure>
+                    <figure><img src="img/index/index-media/media1.png" alt=""></figure>
                     <div class="list_box">
                         <h4>2023.1.16</h4>
                         <p>
@@ -97,7 +97,7 @@
                     </div>
                 </article>
                 <article class="list_item">
-                    <figure><img src="img/media/media-2.jpg" alt=""></figure>
+                    <figure><img src="img/index/index-media/media2.png" alt=""></figure>
                     <div class="list_box">
                         <h4>2023.1.16</h4>
                         <p>
@@ -113,7 +113,7 @@
                     </div>
                 </article>
                 <article class="list_item">
-                    <figure><img src="img/media/media-3.jpg" alt=""></figure>
+                    <figure><img src="img/index/index-media/media3.png" alt=""></figure>
                     <div class="list_box">
                         <h4>2023.1.16</h4>
                         <p>
@@ -129,7 +129,7 @@
                     </div>
                 </article>
                 <article class="list_item">
-                    <figure><img src="img/media/media-4.jpg" alt=""></figure>
+                    <figure><img src="img/index/index-media/media4.png" alt=""></figure>
                     <div class="list_box">
                         <h4>2023.1.16</h4>
                         <p>
@@ -145,7 +145,7 @@
                     </div>
                 </article>
                 <article class="list_item">
-                    <figure><img src="img/media/media-5.jpg" alt=""></figure>
+                    <figure><img src="img/index/index-media/media5.png" alt=""></figure>
                     <div class="list_box">
                         <h4>2023.1.16</h4>
                         <p>
@@ -161,7 +161,7 @@
                     </div>
                 </article>
                 <article class="list_item">
-                    <figure><img src="img/media/media-6.jpg" alt=""></figure>
+                    <figure><img src="img/index/index-media/media6.png" alt=""></figure>
                     <div class="list_box">
                         <h4>2023.1.16</h4>
                         <p>
