--- a/蘵感ZanGan上傳/signup suc.html
+++ b/蘵感ZanGan上傳/signup suc.html
@@ -120,6 +120,7 @@
                     </span>
                 </div>
                 <!-- 右邊小區塊  -->
+                <!-- 茶藝興趣A班 -->
                 <div class="list3">
                     <h2>茶藝興趣A班</h2>
                     <h3>週五下午14:00-16:00，共6堂 <br>
@@ -133,6 +134,27 @@
                         <hr>
                     </span>
                 </div>
+                <!-- 活動:金工山林遊: 悠悠 -->
+                <div class="list3 block2">
+                    <span class="act">
+                        <h3>活動</h3>
+                        <h1>4/13</h1>
+                        <h2>金工山林遊: 悠悠</h2>
+                    </span>
+                    <h3>下午14:00-16:00，共1堂</h3>
+                    <!-- 已添加課程內容區塊  -->
+                    <span class="box2">
+                        <div>
+                            <h4>$</h4>
+                            <h1>8000</h1>
+                        </div>
+                        <hr>
+                    </span>
+                </div>
+                <!-- 送出 -->
+               <button>
+                    <h3>送出</h3>
+               </button>
             </div>
         </div>
 
