0515 0930 signup suc ok

--- a/蘵感ZanGan上傳/signup suc.html
+++ b/蘵感ZanGan上傳/signup suc.html
@@ -153,7 +153,7 @@
                 </div>
                 <!-- 送出 -->
                <button>
-                    <h3>送出</h3>
+                    <a href="#"><h3>送出</h3></a>
                </button>
             </div>
         </div>
