--- a/蘵感ZanGan上傳/signup suc.html
+++ b/蘵感ZanGan上傳/signup suc.html
@@ -84,21 +84,21 @@
                 <label for="ccourse"></label>
                 <select name="ccourse" id="ccourse">
                     <option value="">課程類別:</option>
-                    <option value="藝術插花">藝術插花</option>
-                    <option value="自由繪畫">自由繪畫</option>
+                    <option value="茶藝興趣A班">茶藝興趣A班</option>
+                    <!-- <option value="自由繪畫">自由繪畫</option>
                     <option value="蘵感手作">蘵感手作</option>
                     <option value="香水特製Lab">香水特製Lab</option>
-                    <option value="小點茶藝工坊">小點茶藝工坊</option>
+                    <option value="小點茶藝工坊">小點茶藝工坊</option> -->
                 </select>
                 <!-- 課堂名稱: -->
                 <label for="name"></label>
                 <select name="name" id="name">
                     <option value="">課程名稱:</option>
-                    <option value="藝術插花">藝術插花</option>
-                    <option value="自由繪畫">自由繪畫</option>
+                    <option value="金工山林遊: 悠悠">金工山林遊: 悠悠</option>
+                    <!-- <option value="自由繪畫">自由繪畫</option>
                     <option value="蘵感手作">蘵感手作</option>
                     <option value="香水特製Lab">香水特製Lab</option>
-                    <option value="小點茶藝工坊">小點茶藝工坊</option>
+                    <option value="小點茶藝工坊">小點茶藝工坊</option> -->
                 </select>
                 <!-- 加入預約清單 -->
                 <div class="list">
