--- a/蘵感ZanGan上傳/signup.html
+++ b/蘵感ZanGan上傳/signup.html
@@ -86,26 +86,26 @@
                 <label for="ccourse"></label>
                 <select name="ccourse" id="ccourse">
                     <option value="">課程類別:</option>
-                    <option value="藝術插花">藝術插花</option>
-                    <option value="自由繪畫">自由繪畫</option>
+                    <option value="茶藝興趣A班">茶藝興趣A班</option>
+                    <!-- <option value="自由繪畫">自由繪畫</option>
                     <option value="蘵感手作">蘵感手作</option>
                     <option value="香水特製Lab">香水特製Lab</option>
-                    <option value="小點茶藝工坊">小點茶藝工坊</option>
+                    <option value="小點茶藝工坊">小點茶藝工坊</option> -->
                 </select>
                 <!-- 課堂名稱: -->
                 <label for="name"></label>
                 <select name="name" id="name">
                     <option value="">課程名稱:</option>
-                    <option value="藝術插花">藝術插花</option>
-                    <option value="自由繪畫">自由繪畫</option>
+                    <option value="金工山林遊: 悠悠">金工山林遊: 悠悠</option>
+                    <!-- <option value="自由繪畫">自由繪畫</option>
                     <option value="蘵感手作">蘵感手作</option>
                     <option value="香水特製Lab">香水特製Lab</option>
-                    <option value="小點茶藝工坊">小點茶藝工坊</option>
+                    <option value="小點茶藝工坊">小點茶藝工坊</option> -->
                 </select>
                 <!-- 加入預約清單 -->
                 <div class="list">
                     <h4>加入預約清單</h4>
-                    <img src="img/index/index-news/arrow(白).svg" alt="">
+                    <a href="signup suc.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
                 </div>
             </div>
             <!-- 垂直線 -->
@@ -128,17 +128,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
-
-
-
-
-
-
-
     </main>
 
     <!-- 8.footer -->
