--- a/蘵感ZanGan上傳/cart.html
+++ b/蘵感ZanGan上傳/cart.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>購物車</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    
     
 </head>
 
@@ -104,7 +104,6 @@
                             <h4>$</h4>
                             <h1>8000</h1>
                         </div>
-                        <hr>
                     </span>
                     <!-- 數量增減 -->
                     <div class="box">
@@ -112,10 +111,18 @@
                         <div class="num">1</div>
                         <div class="add">+</div>
                     </div>
+                    <!-- subtotal -->
+                    <div class="box2 box5 box6">
+                        <div>
+                            <h4>$</h4>
+                            <h1>8000</h1>
+                        </div>
+                    </div>
                 </div>
-                <!-- <hr> -->
+                <!-- 分隔線 -->
+                <hr class="hrb">
                 <!-- 活動:金工山林遊: 悠悠 -->
-                <div class="list3 block2">
+                <div class="block2 list5 block3">
                     <span class="act">
                         <h3>活動</h3>
                         <h1>4/13</h1>
@@ -123,13 +130,25 @@
                     </span>
                     <h3>下午14:00-16:00，共1堂</h3>
                     <!-- 已添加課程內容區塊  -->
-                    <span class="box2">
+                    <span class="box2 box7">
                         <div>
                             <h4>$</h4>
                             <h1>8000</h1>
                         </div>
-                        <hr>
                     </span>
+                    <!-- 數量增減 -->
+                    <div class="box box8">
+                        <div class="minus">-</div>
+                        <div class="num">1</div>
+                        <div class="add">+</div>
+                    </div>
+                    <!-- subtotal -->
+                    <div class="box2 box9">
+                        <div>
+                            <h4>$</h4>
+                            <h1>8000</h1>
+                        </div>
+                    </div>
                 </div>
                 <!-- 送出 -->
                 <button>
@@ -209,6 +228,11 @@
             </ul>
         </div>
     </div>
+<!-- jQuery Core 3.7.0原始碼,一定要放在最上面,先被執行 -->
+<script src="https://code.jquery.com/jquery-3.7.0.min.js"
+integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+<!-- 自訂的js,一定要放在最下面,最後被執行 -->
+<script src="script.js"></script>
 </body>
 
 </html>
